--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "tsnd --transpile-only  --respawn --ignore-watch node_modules src/server.ts",
     "migrate:down": "npx knex migrate:down",
-    "migrate:up": "npx knex migrate:latest",
+    "migrate:drop": "npx knex migrate:rollback --all",
+    "migrate:up": "npx knex migrate:latest ",
     "migrate:make": "npx knex migrate:make",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -26,8 +28,10 @@
     "@types/dotenv": "^8.2.0",
     "@types/knex": "^0.16.1",
     "@types/node": "^20.11.24",
+    "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
+    "supertest": "^6.3.4",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.7.1"
+    "vitest": "^1.3.1"
   }
 }
