--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "migrate:up": "npx knex migrate:latest ",
     "migrate:make": "npx knex migrate:make",
     "lint": "eslint src --ext .ts --fix",
+    "build": "tsup src --out-dir build",
     "test": "vitest"
   },
   "keywords": [],
@@ -32,6 +33,7 @@
     "eslint": "^8.57.0",
     "supertest": "^6.3.4",
     "ts-node-dev": "^2.0.0",
+    "tsup": "^8.0.2",
     "vitest": "^1.3.1"
   }
 }
