--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "dev": "tsnd --transpile-only  --respawn --ignore-watch node_modules src/server.ts",
     "migrate:down": "npx knex migrate:down",
@@ -21,7 +24,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7",
+    "pg": "^8.11.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -34,6 +37,7 @@
     "supertest": "^6.3.4",
     "ts-node-dev": "^2.0.0",
     "tsup": "^8.0.2",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "sqlite3": "^5.1.7"
   }
 }
