--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "@types/node": "^20.11.24",
     "@types/supertest": "^6.0.2",
     "eslint": "^8.57.0",
+    "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
     "ts-node-dev": "^2.0.0",
     "tsup": "^8.0.2",
-    "vitest": "^1.3.1",
-    "sqlite3": "^5.1.7"
+    "typescript": "^5.4.2",
+    "vitest": "^1.3.1"
   }
 }
