--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": ">=20"
+    "node": "20.11.0"
   },
   "scripts": {
     "dev": "tsnd --transpile-only  --respawn --ignore-watch node_modules src/server.ts",
