--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "20.11.0"
   },
   "scripts": {
-    "dev": "tsnd --transpile-only  --respawn --ignore-watch node_modules src/server.ts",
+    "dev": "tsx watch src/server.ts",
     "migrate:down": "npx knex migrate:down",
     "migrate:drop": "npx knex migrate:rollback --all",
     "migrate:up": "npx knex migrate:latest ",
@@ -36,8 +36,8 @@
     "eslint": "^8.57.0",
     "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
-    "ts-node-dev": "^2.0.0",
     "tsup": "^8.0.2",
+    "tsx": "^4.7.1",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
   }
