--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "node": "20.11.0"
   },
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "migrate:down": "npx knex migrate:down",
-    "migrate:drop": "npx knex migrate:rollback --all",
-    "migrate:up": "npx knex migrate:latest ",
-    "migrate:make": "npx knex migrate:make",
+    "dev": "tsnd --transpile-only  --respawn --ignore-watch node_modules src/server.ts",
+    "migrate:down": "npx knex migrate:down --ext ts",
+    "migrate:drop": "npx ts-node ./node_modules/.bin/knex migrate:rollback",
+    "migrate:up": "npx ts-node ./node_modules/.bin/knex migrate:latest",
+    "migrate:make": "npx knex migrate:make --ext ts",
     "lint": "eslint src --ext .ts --fix",
     "build": "tsup src --out-dir build",
     "test": "vitest"
@@ -25,6 +25,7 @@
     "fastify": "^4.26.2",
     "knex": "^3.1.0",
     "pg": "^8.11.3",
+    "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "eslint": "^8.57.0",
     "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
+    "ts-node-dev": "^2.0.0",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.2",
